    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
        android:background="#E5E5E5">

        <LinearLayout
            android:id="@+id/linearLayOut"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#212121">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/rides" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="16dp"
                android:text="@string/nearest"
                android:backgroundTint="@color/cardview_dark_background"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="11dp"

                android:text="@string/upcoming"
                android:textColor="@color/white"
                android:backgroundTint="@color/cardview_dark_background"
                />

            <Button
                android:id="@+id/button3"
                android:layout_marginLeft="11dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/past"
                android:backgroundTint="@color/cardview_dark_background"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/imageView2"

                android:layout_width="20dp"
                android:layout_height="16dp"
                android:layout_marginTop="30dp"

                app:srcCompat="@drawable/sort_24" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="77dp"
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#484848"/>
    </FrameLayout>